Updated the documentation

--- a/docs/components/doc-sections/en/components.html
+++ b/docs/components/doc-sections/en/components.html
@@ -250,7 +250,7 @@
         (<i class="mark-el">outside scope</i>), we use <i class="mark-el">this.scope</i>
     </p>
 
-    <div class="block-note-mark-el">
+    <div class="block-note mark-el">
         <p>
             The <i class="note">Easy</i> instance of this component can be accessed in <i
                 class="note mark-el">this.Easy</i>.
