--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -908,6 +908,44 @@ pre code::after,
     border-color: var(--note-yellow);
 }
 
+.color-red {
+    color: var(--note-red);
+}
+
+/* Animations classes */
+.loading-component {
+    z-index: 300;
+    position: absolute;
+    top: 0;
+    background-color: var(--easy-yellow);
+    width: 0%;
+    height: 4px;
+    animation: loading-comp 2s .1s ease forwards,
+                fade-el 1.6s 2.4s ease infinite;
+}
+.blink {
+    animation: fade-el 1s infinite;
+    -webkit-animation: fade-el 1s infinite;
+}
+
+@keyframes loading-comp {
+    to { width: 100%; }
+}
+@-webkit-keyframes loading-comp {
+    to { width: 100%; }
+}
+@keyframes fade-el {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+@-webkit-keyframes fade-el {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+/* End Animations classes */
+
 @media (max-width: 450px) {
     .card-container {
         display: flex;
@@ -977,7 +1015,6 @@ pre code::after,
         padding: 6px 14px;
     }
 }
-
 
 @media (max-width: 1000px) {
     .doc-page .doc-presentation .content {
