--- a/docs/components/doc-sections/en/bindings.html
+++ b/docs/components/doc-sections/en/bindings.html
@@ -40,7 +40,7 @@
         If you don't want to do it this way, you can still use the command
         <span class="note mark-el">e-<i>property</i>="{{ dataProperty }}"</span>,
         it creates the property after being compiled. This commands is very versatile,
-        we will go into details about it in the <a href="#cmd_e" class="note mark-el">commands</a> section.
+        we will go into details about it in the <a href="docs.page.2.html#cmd_e" class="note mark-el">commands</a> section.
     </p>
 
     <pre e-ignore><code class="html hljs">
