--- a/docs/components/doc-sections/en/components.html
+++ b/docs/components/doc-sections/en/components.html
@@ -10,7 +10,7 @@
             class="note-mark-el">Registered</span>, and these two forms can be imported/included
         in the
         same way, using the tag <span class="note mark-el">inc</span> or using a <span class="note mark-el">Official DOM
-            element</span> (a container type).
+            element</span> (a container element).
     </p>
 
     <pre e-ignore><code class="HTML hljs">
@@ -235,7 +235,7 @@
         A block element like a div that will be added to de DOM. If it was not defined an error
         will be showing say:
         <b>The component 'nameId' seems to be empty or it has not a root element eg.:
-            &lt;div&gt;&lt;/div&gt;, to included.</b>
+            <i class="note code">&lt;div&gt;&lt;/div&gt;</i>, to included.</b>
     </p>
 
     <h3> <a id="comp_script" href="#comp_script"> Scripts </a> </h3>
@@ -460,7 +460,7 @@
 
     <div class="block-note info">
         <p>
-            For live usage, you may it in Tutorial Page. <a class="mark-el">Take me there</a>!
+            For live usage, you may keep learing in Tutorial Page. <a i:href="/tutorial" class="mark-el">Take me there</a>!
         </p>
     </div>
 
@@ -495,7 +495,7 @@
             &lt;div class="body"&gt;
                 &lt;content ident="body"&gt;&lt;/content&gt;
             &lt;/div&gt;
-        &lt;/div&gt;                        
+        &lt;/div&gt;
     &lt;/div&gt;
     </code></pre>
 
