--- a/docs/components/doc-sections/en/instance.html
+++ b/docs/components/doc-sections/en/instance.html
@@ -72,7 +72,7 @@
             Allows you to ignore all elements that are inside a container
             (even those that are added later) when using the command <span
                 class="note">e-ignore</span>
-            (We'll talk about that in the <a href="#commands" class=" mark-el">Commands</a>
+            (We'll talk about that in the <a href="docs.page.2.html#commands" class=" mark-el">Commands</a>
             section). <br>
             <span class="note att-border">Be careful, this can slow down your
                 application.</span>
@@ -98,7 +98,7 @@
         application will have
         when it starts, however there is a way to add data while it is already running with the
         <span class="note">app.setData(...)</span> method. (We'll talk about that in the
-        <a href="#methods" class=" mark-el">methods</a> section).
+        <a href="docs.page.3.html#methods" class=" mark-el">methods</a> section).
         <br>
         Data or properties defined on <span class="note">date</span> are not normal
         properties,
