--- a/docs/components/doc-sections/en/introduction.html
+++ b/docs/components/doc-sections/en/introduction.html
@@ -5,7 +5,7 @@
     <p>
         Easy.js, short for <span style="color:var(--easy-yellow)">Easy</span>
         and <span style="color:var(--easy-black)">Asyncronous Javascript</span>,
-        is a javascript library for building user interfaces and helps in the
+        is a javascript library for building user interfaces, and helps in the
         web applications development, providing a synchronous interaction
         between user interfaces and Javascript data.
     </p>
@@ -23,8 +23,7 @@
     <h3> <a id="compatibility" href="#compatibility"> Browsers Compatibility </a> </h3>
     <p>
         It was tested in almost every popular browsers and IE 11, below that is not suported,
-        because it uses some comcepts of <a href="https://caniuse.com/#feat=es6"
-            class="mark-el">
+        because it uses some comcepts of <a href="https://caniuse.com/#feat=es6" class="mark-el">
             ECMAScript 2015 (ES6) </a>.
     </p>
 
@@ -32,6 +31,16 @@
     <p>
         A web application fully developed with easy.js was tested only with small projects,
         larger projects was not tested yet.
+    </p>
+
+    <p>
+        These documentations assume that you are already familiar with <a class="mark-el" title="Learn HTML"
+            target="_blank" href="https://developer.mozilla.org/docs/Learn/HTML/Introduction_to_HTML">HTML</a>,
+        <a class="mark-el" title="Learn Javascript" target="_blank"
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript">JavaScript</a>
+        and <a class="mark-el" title="Learn CSS" target="_blank"
+            href="https://developer.mozilla.org/docs/Learn/CSS/First_steps">CSS</a> (Optional).
+        We are going to show some examples the make your understanding easier.
     </p>
 </section>
 <script>
