--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -8,7 +8,7 @@
             <div class="main-text">
                 <p class="high-text"> v2.0.0 </p>
                 <p class="high-text"> Simpler & Cooler </p>
-                <a href="docs.html" class="high-btn"> Get Started </a>
+                <a href="docs.page.1.html" class="high-btn"> Get Started </a>
             </div>
         </div>
     </div>
@@ -60,7 +60,7 @@
     <div class="main-divider middle-content">
         <div class="center-content">
             <h3 class="main-page-description">
-                What's <span class="note">Easy.js</span> ? Is a javascript library for building user interfaces and helps in 
+                What's <span class="note">Easy.js</span>? Is a javascript library for building user interfaces, and helps in 
                 the web applications development, providing a synchronous interaction between user interfaces and 
                 Javascript data. In some ways and commands, it is very similar to 
                 <span class="note">Vue.js</span> and <span class="note">Angular.js</span>, but it handles things differently!
@@ -112,7 +112,7 @@
         <div class="center-content">
             <div class="main-text">
                 <h3> Want to Learn more? </h3>
-                <a href="docs.html" class="high-btn"> Get Started </a>
+                <a href="docs.page.1.html" class="high-btn"> Get Started </a>
             </div>
         </div>
     </div>
