--- a/docs/components/tutorial/en/introduction.html
+++ b/docs/components/tutorial/en/introduction.html
@@ -8,7 +8,7 @@
             <p>
                 Easy.js, short for <span style="color:var(--easy-yellow)">Easy</span>
                 and <span style="color:var(--easy-black)">Asyncronous Javascript</span>,
-                is a javascript library for building user interfaces and helps in the
+                is a javascript library for building user interfaces, and helps in the
                 web applications development, providing a synchronous interaction
                 between user interfaces and Javascript data.
             </p>
