--- a/docs/components/doc-sections/en/routing.html
+++ b/docs/components/doc-sections/en/routing.html
@@ -2,8 +2,8 @@
     <h1> <a id="routing" href="#routing"> Routing </a> </h1>
     <p>
         The routing funcionality that enable the <b>Single Page Application</b> mode, and creating a SPA with
-        <i class="note">Easy</i> is very simple, because it uses 
-        <a id="comps_incs" class="note mark-el">includer</a> elements.
+        <i class="note">Easy</i> is very simple, because it uses
+        <a href="#comps_incs" class="note mark-el">includer</a> elements.
     </p>
 
     <h3> <a id="routing_setting" href="#routing_setting"> Setting </a> </h3>
@@ -26,7 +26,7 @@
                     route : String, 
                     isDefault : Boolean,
                     isNotFound : Boolean,
-                    children : Object,
+                    children : Object
                 }
             }
         }
@@ -52,9 +52,13 @@
             will be setted to the page after the component has been added to the DOM (It is
             optional). </li>
 
-        <li> <span class="note mark-el">nameId.route</span> &ndash; represents the route that
-            will be setted to the page after the component has been added to the DOM (It is
-            optional). </li>
+        <li> <span class="note mark-el">nameId.isDefault</span> &ndash; set the compoment as the default
+            route of the app.</li>
+
+        <li> <span class="note mark-el">nameId.isNotFound</span> &ndash; set the compoment as the not found
+            route of the app.</li>
+
+        <li> <span class="note mark-el">nameId.children</span> &ndash; represents the of this compoment.</li>
     </ul>
 
     <label>HTML</label>
@@ -90,36 +94,42 @@
     </code></pre>
 
     <p>
-        Whenever routing is used, it is mandatory to define the standard route (standard component) 
-        so that it can be loaded immediately. To do so, just set the 
+        Whenever routing is used, it is mandatory to define the standard route (standard component)
+        so that it can be loaded immediately. To do so, just set the
         <i class="note mark-el">isDefault:true</i> property in the component registering.
     </p>
 
     <p>
-        In the case of page <b>404</b>, we can set the <i class="note mark-el">isNotFound:true</i> property, 
+        In the case of page <b>404</b>, we can set the <i class="note mark-el">isNotFound:true</i> property,
         telling Easy that if there is no component with this route, insert this page.
     </p>
 
     <div class="block-note dont">
         <p>
             Two or more components cannot be defined with with <i class="note">isDefault</i> or
-            <i class="note">isNotFound</i>, if you do, an error will be thrown in saying 
+            <i class="note">isNotFound</i>, if you do, an error will be thrown in saying
             `<i class="color-red">It is not allowed to define more than one 'default'/'notFound' page...</i>`.
         </p>
     </div>
 
     <h3> <a id="routing_navegation" href="#routing_navegation"> Navegation </a> </h3>
     <p>
-        Navigation between pages is done using the tag element <i class="note mark-el">a</i> but with 
-        the attribute <i class="note mark-el">:href</i> or <i class="note mark-el">i:href</i>, 
-        it can also be done with <i class="note">href</i> but we do not recommend using it, we 
+        Navigation between pages is done using the tag element <i class="note mark-el">a</i> but with
+        the attribute <i class="note mark-el">:href</i> or <i class="note mark-el">i:href</i>,
+        it can also be done with <i class="note">href</i> but we do not recommend using it, we
         will describe the behavior of each one.
     </p>
 
     <p>
-        Both <i class="note mark-el">:href</i> or <i class="note mark-el">i:href</i> when defined create the 
-        href attribute combining it with config.base, whenever it is clicked, the default anchor action is 
-        prevented.
+        Both <i class="note mark-el">:href</i> and <i class="note mark-el">i:href</i> when defined create the
+        href attribute combining it with <i class="note mark-el">config.base</i>, whenever it is clicked,
+        the default anchor action is prevented.
+    </p>
+
+    <p>
+        The difference between them is that using the <i class="note mark-el">:href</i> attribute, the
+        <i class="note mark-el">active-link</i> class is added to the element when it is clicked, in the
+        other hand, using <i class="note mark-el">i:href</i>, the addition of the class is ignored.
     </p>
 
     <pre e-ignore><code class="HTML hljs">
@@ -134,13 +144,124 @@
 
     <h3> <a id="routing_nesting" href="#routing_nesting"> Nesting Routes </a> </h3>
     <p>
-
+        Children can be added to each component, this in the children property, and so we can nest routes...
+        The property expects an component element object having the child's nameId and its object.
     </p>
+
+    <pre e-ignore><code class="javascript hljs">
+    var routeApp = new Easy('#routeApp', {
+        components: {
+            elements: {
+                'user' : {
+                    url: '/pages/user',
+                    title : 'User Profile',
+                    route : '/user/:id',
+                    children: {
+                        'user-posts': {
+                            url: '/pages/user-posts',
+                            title : 'Your Posts',
+                            route : '/posts'
+                        },
+                        'user-about': {
+                            url: '/pages/user-about',
+                            title : 'About You',
+                            route : '/about'
+                        }
+                    }
+                }
+            }
+        }
+    });
+    </code></pre>
+
+    <div class="block-note info">
+        <p>
+            Note that in the children route we only put <i class="note mark-el">/childRouteName</i>, because after
+            it registered it will became <i class="note mark-el">/parentRouteName/childRouteName</i>. <br>
+            The nesting the has not limit, meaning that we can also nest in a child.
+        </p>
+    </div>
+
+    <h3> <a id="routing_params" href="#routing_params"> Route Params </a> </h3>
+    <p>
+        To define a parameter on the route, we use: paramName and to extract the data of the route's parameters,
+        we use <i class="note mark-el">this.getParams()</i> in the component instance, returning an object
+        containing all the parameters of the route.
+    </p>
+
+    <pre e-ignore><code class="HTML hljs">
+    &lt;div&gt;
+        &lt;!-- Compoment Content --&gt;
+    &lt;/div&gt;
+    &lt;script&gt;
+        this.loaded = function (el) {
+            var params = this.getParams();
+        }
+    &lt;/script&gt;
+    </code></pre>
 
     <h3> <a id="routing_pretty_url" href="#routing_pretty_url"> HTML5 Mode / Pretty URL </a> </h3>
     <p>
-
+        The default navegation mode is hash mode, which uses a URL hash to navigate between pages without reloading it.
     </p>
+
+    <p>
+        To navegate without using the URL hash, there are a few steps that must be followed, which are:
+    </p>
+
+    <ol>
+        <li> Disable the <i class="note mark-el">config.usehash</i> &ndash; setting to <i class="mark-el">false</i> it
+            make that no hash will be added the navegation anchors. </li>
+
+        <li> Add the <i class="note mark-el">base</i> tag in the page head &ndash; the base need to be added with the
+            same value as compoment <i class="note">config.base</i>. That specify the base URL to use for all relative
+            URLs in a document.
+            <a class="mark-el" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base" target="_blank"
+                rel="noopener noreferrer">Click me for more base tag info</a>. </li>
+
+        <li> Configure the server to return <i class="note mark-el">index.html</i> if the URL doesn't match any static
+            assets &ndash; as the application only runs in one page `the index` we need only to tell the server to
+            return this file allowing the <i class="note mark-el">easy.js</i> handling the navegation in the front-end.
+        </li>
+    </ol>
+
+    <pre e-ignore><code class="HTML hljs">
+    &lt;head&gt;
+        &lt;base href="/" &gt;
+        ...
+    &lt;/head&gt;
+    </code></pre>
+    <pre e-ignore><code class="javascript hljs">
+    var routeApp = new Easy('#routeApp', {
+        components: {
+            config: {
+                usehash: false,
+                base: '/'
+            },
+            elements: {
+                ...
+            }
+        }
+    });
+    </code></pre>
+
+    <h3> Apache Configuration Example </h3>
+    <pre e-ignore><code class="bat hljs">
+    RewriteEngine On
+    
+    # Setting the base path of the project
+    RewriteBase /
+
+    # Return the index.html file if the request is this 
+    RewriteRule ^index\.html$ - [L]
+
+    # If the request file name is not a directory
+    RewriteCond %{REQUEST_FILENAME} !-d
+    # If the request file name is not a file
+    RewriteCond %{REQUEST_FILENAME} !-f
+    # Return the index.html file 
+    RewriteRule . index.html [L]
+    </code></pre>
 </section>
 <script>
     this.mounted = function (el) {
